feat: accept recreational
